--- a/src/ui/notificationssettingspage.ui
+++ b/src/ui/notificationssettingspage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>526</width>
-    <height>642</height>
+    <height>555</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,12 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="label_2">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Clementine can show a message when the track changes.</string>
      </property>
@@ -38,13 +44,6 @@
        <widget class="QRadioButton" name="notifications_native">
         <property name="text">
          <string>Show a native desktop notification</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="notifications_pretty">
-        <property name="text">
-         <string>Show a pretty OSD</string>
         </property>
        </widget>
       </item>
@@ -254,84 +253,14 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="notifications_pretty_group">
-     <property name="title">
-      <string>Pretty OSD options</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Background opacity</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" colspan="2">
-       <widget class="QSlider" name="notifications_opacity">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Background color</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="notifications_bg_preset">
-        <item>
-         <property name="text">
-          <string>Basic Blue</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Clementine Orange</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Custom...</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>Text options</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="notifications_fg_choose">
-        <property name="text">
-         <string>Choose color...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
-       <widget class="QPushButton" name="notifications_font_choose">
-        <property name="text">
-         <string>Choose font...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer_3">
+    <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>32</height>
+       <height>40</height>
       </size>
      </property>
     </spacer>
